# visual-gimmicks

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: app.rs  h_fractal.rs  lib.rs  mandelbrot.rs  spiral.rs
www/: index.html  main.js  style.css
