[package]
name = "spiral-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "Document",
  "HtmlCanvasElement",
  "HtmlElement",
  "CanvasRenderingContext2d",
  "Element",
  "CssStyleDeclaration",
  "ImageData",
  "PointerEvent",
  "Performance",
  "console",
]
